<resources>
    <string name="app_name">OneDrive API Explorer</string>
    <string name="welcome">Welcome to the OneDrive API Explorer!</string>
    <string name="start_exploring">Start Browsing Your OneDrive</string>
    <string name="sign_out">Sign out</string>
    <string name="empty_list">This folder is empty. Use the action bar to upload files or create sub-folders.</string>
    <string name="empty_file">You can use the action bar to modify this file or press the back button to return to the parent folder.</string>
    <string name="loading_progress_text">Downloading item information…</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="upload_file">Upload File</string>
    <string name="create_folder">Create Folder</string>
    <string name="refresh">Refresh</string>
    <string name="display_item_default_name">Foo.bar.jpg</string>
    <string name="display_item_default_types">Audio, Photo, Video</string>
    <string name="item_fragment_item_lookup_error">Error looking up this item %1$s</string>
    <string name="confirm_delete_action">Are you sure you want to delete %1$s?</string>
    <string name="deleted_this_item">"Deleted %1$s"</string>
    <string name="cancel">Cancel</string>
    <string name="renamed_item">Renamed file %1$s to %2$s</string>
    <string name="rename_error">Error renaming file %1$s</string>
    <string name="new_folder_hint">New Folder</string>
    <string name="created_folder">Created folder file %1$s under %2$s</string>
    <string name="new_folder_error">Error creating new folder under %1$s</string>
    <string name="upload_complete">"Upload %1$s complete"</string>
    <string name="upload_failed">"Upload %1$s failed"</string>
    <string name="item_path_separator">/</string>
    <string name="download">Download</string>
    <string name="file_from_onedrive">Downloading from OneDrive</string>
    <string name="starting_download_message">Starting file download</string>
    <string name="thumbnail_description">Thumbnail for %1$s</string>
    <string name="upload_in_progress_title">Upload in progress</string>
    <string name="upload_in_progress_message">Uploading…</string>
    <string name="upload_in_progress_number_format">%1$d/%2$d bytes</string>
    <string name="view_format_visualize">Visualization</string>
    <string name="view_format_json">Json Response</string>
    <string name="wifi_unavailable_error_message">Unable to access the internet, please visit connection settings</string>
    <string name="created_link">Link created, and copied into the Android clipboard</string>
    <string name="create_link">Create a Link</string>
    <string name="view_delta">View Delta</string>
    <string name="delta_title">Viewing Delta of %1$s</string>
    <string name="empty_delta">No changes since last request</string>
    <string name="cleared_saved_delta_tokens">Cleared all saved delta tokens</string>
    <string name="cleared_saved_delta_token">Cleared the delta tokens for %1$s</string>
    <string name="reset_all_tokens">Reset All Delta Tokens</string>
    <string name="reset_token">Reset this Delta Token</string>
    <string name="set_copy_destination">Set Copy Destination</string>
    <string name="copy_item">Copy to Destination</string>
    <string name="copy_success_message">Created a copy of %1$s in the path %2$s</string>
    <string name="upload_failed_name_conflict">The filename conflicted with another file</string>
    <string name="navigate_by_path">Navigate by Path</string>
    <string name="navigate">Navigate</string>
    <string name="error_title">Error!</string>
    <string name="close">Close</string>
    <string name="max_pages_downloaded">Maximum number of pages downloads</string>
</resources>
