<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group >
        <item
            android:id="@+id/action_refresh"
            android:title="@string/refresh"
            android:orderInCategory="20" />
        <item
            android:id="@+id/action_rename"
            android:title="@string/rename"
            android:orderInCategory="21" />
        <item
            android:id="@+id/action_copy"
            android:title="@string/copy"
            android:orderInCategory="22" />
    </group>

    <group>
        <item
            android:id="@+id/action_create_folder"
            android:title="@string/create_folder"
            android:orderInCategory="30" />
        <item
            android:id="@+id/action_upload_file"
            android:title="@string/upload_file"
            android:orderInCategory="30" />
        <item
            android:id="@+id/action_upload_chunked_file"
            android:title="@string/upload_chunked_file"
            android:orderInCategory="30" />
    </group>

    <group>
        <item
            android:id="@+id/action_delete"
            android:title="@string/delete"
            android:orderInCategory="40" />
    </group>

</menu>