<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        android:showAsAction="ifRoom"
        android:orderInCategory="20" />
    <item
        android:id="@+id/reset_token"
        android:icon="@android:drawable/ic_input_delete"
        android:title="@string/reset_token"
        android:showAsAction="ifRoom"
        android:orderInCategory="21" />
    <item
        android:id="@+id/reset_all_tokens"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/reset_all_tokens"
        android:showAsAction="ifRoom"
        android:orderInCategory="22" />

</menu>